--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div class="header container">
         <nav class="nav-bar" role="navigation" aria-label="Main navigation">
           <div class="brand">
-            <a href="/" aria-label="Ahsanul Mostakin Home">
+            <a href="./" aria-label="Ahsanul Mostakin Home">
               <h1><span>A</span>hsanul <span>M</span>ostakin</h1>
             </a>
           </div>
@@ -424,7 +424,7 @@
     <footer id="footer" role="contentinfo">
       <div class="footer container">
         <div class="brand">
-          <a href="/" aria-label="Ahsanul Mostakin Home">
+          <a href="./" aria-label="Ahsanul Mostakin Home">
             <h1><span>A</span>hsanul <span>M</span>ostakin</h1>
           </a>
         </div>
