--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
               build innovative solutions. I’m always eager to grow and tackle
               new opportunities in the world of web development.
             </p>
-            <a href="./files/Ahsanul_Mostakin_Resume.pdf" class="cta" download
+            <a href="./img/assets/Resume.pdf" class="cta" download
               >Download Resume</a
             >
           </div>
