--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                   >Certifications</a
                 >
               </li>
-              <li><a href="#contact" data-after="Contact">Contact</a></li>
+              <li><a href="#contact" data-after="Contact">Get in Touch</a></li>
             </ul>
           </div>
           <button id="theme-toggle" aria-label="Toggle dark/light mode">
@@ -629,62 +629,144 @@
       </section>
       <!-- End Certifications Section -->
 
-      <!-- Contact Section -->
+      <!-- Get in Touch Section -->
       <section id="contact">
         <div class="contact container">
-          <div>
-            <h1 class="section-title">Contact Info</h1>
+          <div class="contact-header">
+            <h1 class="section-title">Get in Touch</h1>
+            <p>
+              I’m excited to connect with you regarding potential
+              collaborations, project inquiries, or professional opportunities.
+              Please feel free to reach out using the form below or my contact
+              details.
+            </p>
           </div>
-          <div class="contact-items">
-            <div class="contact-item">
-              <div class="icon">
-                <img
-                  src="https://img.icons8.com/bubbles/100/000000/phone.png"
-                  alt="Phone Icon"
-                  width="50"
-                  height="50"
-                  loading="lazy"
-                />
+          <div class="contact-content">
+            <div class="contact-info">
+              <h2>Contact Information</h2>
+              <div class="contact-item">
+                <div class="icon">
+                  <img
+                    src="https://img.icons8.com/bubbles/100/000000/phone.png"
+                    alt="Phone Icon"
+                    width="50"
+                    height="50"
+                    loading="lazy"
+                  />
+                </div>
+                <div class="contact-info-details">
+                  <h3>Phone</h3>
+                  <p><a href="tel:+8801760360473">+880 1760-360473</a></p>
+                </div>
               </div>
-              <div class="contact-info">
-                <h1>Phone</h1>
-                <h2>01760-360473</h2>
+              <div class="contact-item">
+                <div class="icon">
+                  <img
+                    src="https://img.icons8.com/bubbles/100/000000/new-post.png"
+                    alt="Email Icon"
+                    width="50"
+                    height="50"
+                    loading="lazy"
+                  />
+                </div>
+                <div class="contact-info-details">
+                  <h3>Email</h3>
+                  <p>
+                    <a href="mailto:ahsanulmostakin7@gmail.com"
+                      >ahsanulmostakin7@gmail.com</a
+                    >
+                  </p>
+                </div>
+              </div>
+              <div class="contact-item">
+                <div class="icon">
+                  <img
+                    src="https://img.icons8.com/bubbles/100/000000/map-marker.png"
+                    alt="Address Icon"
+                    width="50"
+                    height="50"
+                    loading="lazy"
+                  />
+                </div>
+                <div class="contact-info-details">
+                  <h3>Address</h3>
+                  <p>Basundhara Residential Area, Dhaka, Bangladesh</p>
+                </div>
               </div>
             </div>
-            <div class="contact-item">
-              <div class="icon">
-                <img
-                  src="https://img.icons8.com/bubbles/100/000000/new-post.png"
-                  alt="Email Icon"
-                  width="50"
-                  height="50"
-                  loading="lazy"
-                />
-              </div>
-              <div class="contact-info">
-                <h1>Email</h1>
-                <h2>ahsanulmostakin7@gmail.com</h2>
-              </div>
-            </div>
-            <div class="contact-item">
-              <div class="icon">
-                <img
-                  src="https://img.icons8.com/bubbles/100/000000/map-marker.png"
-                  alt="Address Icon"
-                  width="50"
-                  height="50"
-                  loading="lazy"
-                />
-              </div>
-              <div class="contact-info">
-                <h1>Address</h1>
-                <h2>Basundhara Residential Area, Dhaka, Bangladesh</h2>
-              </div>
+            <div class="contact-form">
+              <h2>Inquiry Form</h2>
+              <form
+                action="https://formspree.io/f/xjkrwrgq"
+                method="POST"
+                aria-label="Professional Inquiry Form"
+              >
+                <div class="form-group">
+                  <label for="name"
+                    >Full Name <span class="required">*</span></label
+                  >
+                  <input
+                    type="text"
+                    id="name"
+                    name="name"
+                    placeholder="Enter your full name"
+                    required
+                    aria-required="true"
+                    pattern="[A-Za-z\s]{2,}"
+                    title="Please enter a valid name (letters and spaces only, minimum 2 characters)"
+                  />
+                </div>
+                <div class="form-group">
+                  <label for="email"
+                    >Email Address <span class="required">*</span></label
+                  >
+                  <input
+                    type="email"
+                    id="email"
+                    name="email"
+                    placeholder="Enter your email address"
+                    required
+                    aria-required="true"
+                    title="Please enter a valid email address"
+                  />
+                </div>
+                <div class="form-group">
+                  <label for="subject"
+                    >Subject <span class="required">*</span></label
+                  >
+                  <input
+                    type="text"
+                    id="subject"
+                    name="subject"
+                    placeholder="Enter the subject of your inquiry"
+                    required
+                    aria-required="true"
+                    title="Please enter a subject for your message"
+                  />
+                </div>
+                <div class="form-group">
+                  <label for="message"
+                    >Message <span class="required">*</span></label
+                  >
+                  <textarea
+                    id="message"
+                    name="message"
+                    placeholder="Please provide details of your inquiry"
+                    rows="6"
+                    required
+                    aria-required="true"
+                    title="Please enter your message"
+                  ></textarea>
+                </div>
+                <button type="submit" class="cta" aria-label="Submit Inquiry">
+                  Submit Inquiry
+                </button>
+              </form>
             </div>
           </div>
         </div>
       </section>
-      <!-- End Contact Section -->
+      <!-- End Get in Touch Section -->
     </main>
 
     <!-- Footer -->
